# v1dd-public

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis-runner/: clustering.py  clustering_no_lsn_ni12.py  comb_decoding.py  decoding.py  generate_metrics_csv.py  modeling.py  run_decoding.ipynb  run_decoding.py  run_decoding.sh  run_lsn_ns_analysis_for_plane.py  running_correlations.ipynb
artifacts/: subfield_results_250324_shufFalse.csv  subfield_results_250324_shufTrue.csv
notebooks/: decoding_stability_test.ipynb  decoding_suppfigures.ipynb  demo_data.ipynb  merge_arefeh_and_chase_analysis.ipynb  merge_lsn_ns_and_other_analysis.ipynb  modeling.ipynb  modeling.py  modeling_v2.ipynb  new_decoding.ipynb  new_subfield_analysis.ipynb  new_v1dd_figure5.ipynb  redo_on_off_subfields_fig6.ipynb  running_correlation_analysis.ipynb  testing_new_decoding.ipynb  testing_spont_decoding.ipynb  v1dd_figure1.ipynb  v1dd_figure2.ipynb  v1dd_figure2_new.ipynb  v1dd_figure3.ipynb  v1dd_figure3_old.ipynb  v1dd_figure4.ipynb  v1dd_figure5.ipynb  v1dd_figure6.ipynb  v1dd_figure7.ipynb  v1dd_figure8.ipynb  v1dd_supplementary_figure1.ipynb  v1dd_supplementary_figure10.ipynb  v1dd_supplementary_figure11.ipynb  v1dd_supplementary_figure12.ipynb  v1dd_supplementary_figure2.ipynb  v1dd_supplementary_figure3.ipynb  v1dd_supplementary_figure4.ipynb  v1dd_supplementary_figure5.ipynb  v1dd_supplementary_figure6.ipynb  v1dd_supplementary_figure7.ipynb  v1dd_supplementary_figure8.ipynb  v1dd_supplementary_figure9.ipynb
v1dd-public/: chi_square_continuous.py  utils.py
(+9 files in other folders)
